[metadata]
name = pipe21
version = 1.0.11
description = simple functional pipes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tandav/pipe21
author = Alexander Rodionov
author_email = tandav@tandav.me
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:


[options.extras_require]
dev =
    bumpver
    hypothesis
    mypy
    pytest
    pytest-cov

[mypy]
python_version = 3.10
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false

[isort]
line_length = 120
include_trailing_comma = true
force_single_line = true
indent = 4

[flake8]
max-line-length = 200
max-complexity = 10
recursive = true
aggressive = 3
jobs = 8

[bumpver]
current_version = "v1.0.11"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = True
tag = True

[bumpver:file_patterns]
setup.cfg =
    version = {pep440_version}
    current_version = "{version}"
pipe21/__init__.py =
    __version__ = '{pep440_version}'
